--- a/front-end/mall4m/pages/user/user.wxss
+++ b/front-end/mall4m/pages/user/user.wxss
@@ -9,6 +9,7 @@ page {
   padding: 0;
   width: 66px !important;
   border-radius: 33px;
+  margin-left: 20px;
   margin-top: 0px;
   margin-bottom: 0px;
 }
@@ -27,6 +28,7 @@ page {
   background: #fff;
   text-align: center;
   padding: 30rpx 0;
+  margin: 0rpx;
 }
 
 .userinfo .userinfo-avatar {
