小程序首页轮播图支持跳转到指定页面

--- a/front-end/mall4m/pages/index/index.wxml
+++ b/front-end/mall4m/pages/index/index.wxml
@@ -15,7 +15,10 @@
       <block wx:for='{{indexImgs}}' wx:key='imgUrl'>
         <swiper-item class="banner-item">
           <view class='img-box'>
-            <image src='{{item.imgUrl}}' data-prodid='{{item.relation}}' bindtap='toProdPage' class='banner'></image>
+            <image src='{{item.imgUrl}}' data-prodid='{{item.relation}}' 
+            data-type='{{item.type}}' 
+            data-item='{{item}}' 
+            bindtap='toSwiperLinkPage' class='banner'></image>
           </view>
         </swiper-item>
       </block>
