--- a/front-end/mall4m/pages/user/user.wxml
+++ b/front-end/mall4m/pages/user/user.wxml
@@ -162,6 +162,14 @@
                 </view>
                 <view class='arrowhead'></view>
             </view>
+            
+            <view class='memu-item' >
+                <view class="i-name">
+                    <image src='../../images/icon/myAddr.png'></image>
+                    <button open-type="contact" bindcontact="handleContact" session-from="sessionFrom">asdasd</button>
+                </view>
+                <view class='arrowhead'></view>
+            </view>
 
         </view>
 
