--- a/front-end/mall4m/pages/prod/prod.wxml
+++ b/front-end/mall4m/pages/prod/prod.wxml
@@ -110,7 +110,7 @@
     <view class="btn icon" bindtap='toConcatPage'>
       <image src="../../images/tabbar/message.png"></image>
       联系客服
-      <button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contactBtn">联系客服</button>
+      <button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contact-btn">联系客服</button>
     </view>
     <view class="btn cart" bindtap='showSku'>
       <text>加入购物车</text>
