--- a/front-end/mall4m/pages/basket/basket.wxml
+++ b/front-end/mall4m/pages/basket/basket.wxml
@@ -1,28 +1,28 @@
 <!--pages/basket/basket.wxml-->
 <view class='container'>
   <view class="prod-list">
-    <block wx:for="{{shopCartItemDiscounts}}" wx:key='' wx:for-index="scIndex">
+    <block wx:for="{{shopCartItemDiscounts}}" wx:key='item' wx:for-index="scIndex">
       <view class='prod-block'>
         <view class='discount-tips' hidden='{{!item.chooseDiscountItemDto}}'>
           <text class='text-block'>{{wxs.parseDiscount(item.chooseDiscountItemDto.discountRule)}}</text>
           <text class='text-list'>{{wxs.parseDiscountMsg(item.chooseDiscountItemDto.discountRule,item.chooseDiscountItemDto.needAmount,item.chooseDiscountItemDto.discount)}}</text>
         </view>
-        <block wx:for="{{item.shopCartItems}}" wx:key='' wx:for-item="prod">
+        <block wx:for="{{item.shopCartItems}}" wx:key='item' wx:for-item="prod">
           <view class='item'>
             <view class="btn">
               <label>
                 <checkbox bindtap='onSelectedItem' data-scindex="{{scIndex}}" data-index="{{index}}" value="{{prod.prodId}}" checked="{{prod.checked}}" color="#105c3e" />
               </label>
             </view>
-            <view class='prodinfo'>
-              <view class="pic">
+            <view class='prodinfo' >
+              <view class="pic" bindtap='toProdPage' data-prodid="{{prod.prodId}}">
                 <image src='{{prod.pic}}' />
               </view>
               <view class="opt">
-                <view class='prod-name'>{{prod.prodName}}</view>
-                <text class='prod-info-text {{prod.skuName?"":"empty-n"}}'>{{prod.skuName}}</text>
+                <view class='prod-name' bindtap='toProdPage' data-prodid="{{prod.prodId}}">{{prod.prodName}}</view>
+                <text class='prod-info-text {{prod.skuName?"":"empty-n"}}' bindtap='toProdPage' data-prodid="{{prod.prodId}}">{{prod.skuName}}</text>
                 <view class='price-count'>
-                  <view class='price'>
+                  <view class='price' bindtap='toProdPage' data-prodid="{{prod.prodId}}">
                     <text class='symbol'>￥</text>
                     <text class='big-num'>{{wxs.parsePrice(prod.price)[0]}}</text>
                     <text class='small-num'>.{{wxs.parsePrice(prod.price)[1]}}</text>
