--- a/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
+++ b/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
@@ -1,2 +1,25 @@
 <!--pages/user-balance-detail/user-balance-detail.wxml-->
-<text>pages/user-balance-detail/user-balance-detail.wxml</text>
+<view class='container'>
+
+  <view class="pageHead">
+    <view class="cardHead">
+      <view class="cardNo">
+        <view class="cardNoLeft"> No.1000000000</view>
+      </view>
+      <view style="margin-top: 2vw;">账户余额</view>
+      <view class="bananceNum">¥79.10</view>
+    </view>
+    
+  </view>
+  <view style="display: flex; position:fixed; z-index: 11; top:33vw;width:100%; justify-content:space-around; margin-top: -1vw; background-color: #fff; padding:6vw 0 4vw;">
+    <view class="activeTab">近一个月</view>
+    <view>全部</view>
+  </view>
+  <view class="consumeList">
+    <view class="consumeItem" wx:for="(item,index) in 30">
+      <view style="color:rgb(19, 133, 24)">-99元</view>
+      <view class="consumeDate">2023-12-02 20:09:09</view>
+    </view>
+  </view>
+  
+</view>
