--- a/front-end/mall4m/pages/user-info/pages/ticketCenter/ticketCenter.wxss
+++ b/front-end/mall4m/pages/user-info/pages/ticketCenter/ticketCenter.wxss
@@ -10,6 +10,7 @@
     border-radius: 4vw;
     color:#fff;
     position: relative;
+    background-image: url(/images/icon/bg1.jpg);
 }
 .couponName{
     font-size: 20px; 
