--- a/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
+++ b/front-end/mall4m/pages/balance/pages/user-balance-detail/user-balance-detail.wxml
@@ -12,8 +12,8 @@
     
   </view>
   <view style="display: flex; position:fixed; z-index: 11; top:33vw;width:100%; justify-content:space-around; margin-top: -1vw; background-color: #fff; padding:6vw 0 4vw;">
-    <view class="activeTab">近一个月</view>
-    <view>全部</view>
+    <view class="{{tabIndex==0?'activeTab':''}}" bindtap="changeTab" data-index="{{0}}">近一个月</view>
+    <view class="{{tabIndex==1?'activeTab':''}}" bindtap="changeTab" data-index="{{1}}">全部</view>
   </view>
   <view class="consumeList">
     <view class="consumeItem" wx:for="(item,index) in 30">
