--- a/front-end/mall4m/pages/user/user.wxml
+++ b/front-end/mall4m/pages/user/user.wxml
@@ -1,207 +1,210 @@
 <!--pages/user/user.wxml-->
 <view class='container'>
-    <!-- 用户信息 -->
-    <view class='userinfo' style="box-sizing:border-box;background:linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);">
-        <view style="display: flex; justify-content: flex-start; height: 66px; padding-bottom: 1vw;">
-            <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar" style="min-width: 66px; margin-right: 0;">
-                <image class="avatar" src="{{avatarUrl}}"></image>
-            </button>
-            <view style="color:#fff; padding-left: 7vw;">
-                <view class='userinfo-name' style="margin-top: 0;">
-                    <input type="nickname" style="color:#fff; text-align: left;" placeholder-style="color:#fff" class='userinfo-name' placeholder="请输入昵称" value="{{nickName}}" bindinput="syncInputValue" bindblur="setInputValue" />
-                </view>
-                <view wx:if="userMobile">
-                    <view class='userinfo-name' wx:if="{{userMobile !=null && closeEye == true}}" style="padding-right: 7vw; justify-content: flex-start;">
-                        <text bindtap='toBindingPhone'>{{desensitiveMobile(phonenum)}}</text>
-                        <image src="/images/icon/eye-close.png" mode="widthFix" style="width:3vw;margin-left: 2vw;" bindtap="changeEye" />
-                    </view>
-                    <view class='userinfo-name' wx:if="{{closeEye == false}}" style="padding-right: 7vw; justify-content: flex-start">
-                        <text bindtap='toBindingPhone'>{{userMobile}}</text>
-                        <image src="/images/icon/eye-open.png" mode="widthFix" style="width:3vw;margin-left: 2vw" bindtap="changeEye" />
-                    </view>
-                </view>
-            </view>
+  <!-- 用户信息 -->
+  <view class='userinfo' style="box-sizing:border-box;background:linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);">
+    <view style="display: flex; justify-content: flex-start; height: 66px; padding-bottom: 1vw;">
+      <button class="avatar-wrapper" open-type="chooseAvatar" bind:chooseavatar="onChooseAvatar" style="min-width: 66px; margin-right: 0;">
+        <image class="avatar" src="{{avatarUrl}}"></image>
+      </button>
+      <view style="color:#fff; padding-left: 7vw;">
+        <view class='userinfo-name' style="margin-top: 0;">
+          <input type="nickname" style="color:#fff; text-align: left;" placeholder-style="color:#fff" class='userinfo-name' placeholder="点击获取微信昵称" value="{{nickName}}" bindinput="syncInputValue" bindblur="setInputValue" />
         </view>
+        <view wx:if="{{userMobile != null}}">
+          <view class='userinfo-name' wx:if="{{userMobile != null && closeEye == true}}" style="padding-right: 7vw; justify-content: flex-start;">
+            <text bindtap='toBindingPhone'>{{(userMobile+'2')}}</text>
+            <image src="/images/icon/eye-close.png" mode="widthFix" style="width:3vw;margin-left: 2vw;" bindtap="changeEye" />
+          </view>
+          <view class='userinfo-name' wx:if="{{userMobile != null &&closeEye == false}}" style="padding-right: 7vw; justify-content: flex-start">
+            <text bindtap='toBindingPhone'>{{userMobile+'2'}}</text>
+            <image src="/images/icon/eye-open.png" mode="widthFix" style="width:3vw;margin-left: 2vw" bindtap="changeEye" />
+          </view>
+        </view>
+      </view>
+    </view>
 
-        <!-- 积分和余额 -->
-        <view>
+    <!-- 积分和余额 -->
+    <view>
+      <view wx:if="{{userMobile==null}}">
+        <view class='binding-phone'>
+          <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class="contact-btn"></button>
+          <text class='show-tip'>点击快速注册会员。</text>
+        </view>
+      </view>
+      <view wx:if="{{userMobile!=null}}">
+        <view style="display: flex; justify-content: space-around;color:#fff; margin-top: 20rpx;">
+          <view class='userinfo-name' bindtap='toUserBalancePage' style="flex-direction: column;">
             <view>
-                <view style="display: flex; justify-content: space-around;color:#fff; margin-top: 20rpx;">
-                    <view class='userinfo-name' bindtap='toUserBalancePage' style="flex-direction: column;">
-                        <view>
-                            888.00
-                        </view>
-                        <view>
-                            余额
-                        </view>
-                    </view>
-                    <view class='userinfo-name' style="flex-direction: column;">
-                        <view>
-                            888
-                        </view>
-                        <view>
-                            积分
-                        </view>
-                    </view>
-                    <view class='userinfo-name' style="flex-direction: column;" bindtap='toMyCouponPage'>
-                        <view>
-                            3
-                        </view>
-                        <view>
-                            优惠券
-                        </view>
-                    </view>
-                </view>
-
-
-                <view class='userinfo-name'>
-                </view>
+              {{userBalance.balance}}
             </view>
+            <view>
+              余额
+            </view>
+          </view>
+          <view class='userinfo-name' style="flex-direction: column;">
+            <view>
+              {{userBalance.credits}}
+            </view>
+            <view>
+              {{'积分'}}
+            </view>
+          </view>
+          <view class='userinfo-name' style="flex-direction: column;" bindtap='toMyCouponPage'>
+            <view>
+              {{'0'}}
+            </view>
+            <view>
+              优惠券
+            </view>
+          </view>
         </view>
 
-    </view>
-    <!--不显示 原始样式-->
-    <view class='userinfo' wx:if="{{openSource == false}}">
-        <view class='userinfo-avatar'>
-            <!-- <open-data type="userAvatarUrl"></open-data> -->
-            <image class='userinfo-avatar-img' src='{{avatarUrl}}'></image>
-        </view>
+
         <view class='userinfo-name'>
-            <view>{{nickName}}</view>
-            <!-- <open-data type="userNickName"></open-data> -->
         </view>
-        <view class='userinfo-name'>
-            <view>{{userMobile}}</view>
-        </view>
+      </view>
     </view>
-    <!-- <view class='binding-phone'>
+
+  </view>
+  <!--不显示 原始样式-->
+  <view class='userinfo' wx:if="{{openSource == false}}">
+    <view class='userinfo-avatar'>
+      <!-- <open-data type="userAvatarUrl"></open-data> -->
+      <image class='userinfo-avatar-img' src='{{avatarUrl}}'></image>
+    </view>
+    <view class='userinfo-name'>
+      <view>{{nickName}}</view>
+      <!-- <open-data type="userNickName"></open-data> -->
+    </view>
+    <view class='userinfo-name'>
+      <view>{{userMobile}}</view>
+    </view>
+  </view>
+  <!-- <view class='binding-phone'>
     <text class='show-tip'>绑定手机号后可查看订单和领取优惠券，</text>
     <text class='gotobinding' bindtap='toBindingPhone'>去绑定</text>
   </view> -->
 
-    <!-- 不显示 -->
-    <view class='binding-phone' wx:if="{{userMobile == null || userMobile == ''}}">
-        <text class='show-tip'>绑定手机号，</text>
-        <text class='gotobinding' bindtap='toBindingPhone'>去绑定</text>
+  <!-- 不显示 -->
+  <view class='binding-phone' wx:if="{{ false && userMobile == null || userMobile == ''}}">
+    <text class='show-tip'>绑定手机号，</text>
+    <text class='gotobinding' bindtap='toBindingPhone'>去绑定</text>
+  </view>
+
+  <!-- end 用户信息 -->
+
+  <view class='list-cont'>
+    <!-- 订单状态 -->
+    <view class='total-order'>
+      <view class='order-tit'>
+        <text style='font-weight:bold'>我的订单
+        </text>
+        <view class='checkmore' bindtap='toOrderListPage' data-sts="0">
+          <text>查看全部 </text>
+          <text class='arrowhead'></text>
+        </view>
+      </view>
+      <view class='procedure'>
+        <view class='items' bindtap='toOrderListPage' data-sts="1">
+          <image src='../../images/icon/toPay.png'></image>
+          <text>待支付</text>
+          <text class='num-badge' wx:if="{{orderAmount.unPay>0}}">{{orderAmount.unPay}}</text>
+        </view>
+        <view class='items' bindtap='toOrderListPage' data-sts="2">
+          <image src='../../images/icon/toDelivery.png'></image>
+          <text>待发货</text>
+          <text class='num-badge' wx:if="{{orderAmount.payed>0}}">{{orderAmount.payed}}</text>
+        </view>
+        <view class='items' bindtap='toOrderListPage' data-sts="3">
+          <image src='../../images/icon/toTake.png'></image>
+          <text>待收货</text>
+          <text class='num-badge' wx:if="{{orderAmount.consignment>0}}">{{orderAmount.consignment}}</text>
+        </view>
+        <view class='items' bindtap='toOrderListPage' data-sts="5">
+          <image src='../../images/icon/toComment.png'></image>
+          <text>已完成</text>
+          <text class='num-badge' wx:if="{{orderAmount.success>0}}">{{orderAmount.success}}</text>
+        </view>
+      </view>
     </view>
-    <view class='binding-phone' >
-        <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class="contact-btn"></button>
-        <text class='show-tip'>您还不是优选会员，获取微信手机号注册成为优选会员。</text>
-    </view>
-    <!-- end 用户信息 -->
+    <!--end 订单状态 -->
 
-    <view class='list-cont'>
-        <!-- 订单状态 -->
-        <view class='total-order'>
-            <view class='order-tit'>
-                <text style='font-weight:bold'>我的订单
-                </text>
-                <view class='checkmore' bindtap='toOrderListPage' data-sts="0">
-                    <text>查看全部 </text>
-                    <text class='arrowhead'></text>
-                </view>
-            </view>
-            <view class='procedure'>
-                <view class='items' bindtap='toOrderListPage' data-sts="1">
-                    <image src='../../images/icon/toPay.png'></image>
-                    <text>待支付</text>
-                    <text class='num-badge' wx:if="{{orderAmount.unPay>0}}">{{orderAmount.unPay}}</text>
-                </view>
-                <view class='items' bindtap='toOrderListPage' data-sts="2">
-                    <image src='../../images/icon/toDelivery.png'></image>
-                    <text>待发货</text>
-                    <text class='num-badge' wx:if="{{orderAmount.payed>0}}">{{orderAmount.payed}}</text>
-                </view>
-                <view class='items' bindtap='toOrderListPage' data-sts="3">
-                    <image src='../../images/icon/toTake.png'></image>
-                    <text>待收货</text>
-                    <text class='num-badge' wx:if="{{orderAmount.consignment>0}}">{{orderAmount.consignment}}</text>
-                </view>
-                <view class='items' bindtap='toOrderListPage' data-sts="5">
-                    <image src='../../images/icon/toComment.png'></image>
-                    <text>已完成</text>
-                    <text class='num-badge' wx:if="{{orderAmount.success>0}}">{{orderAmount.success}}</text>
-                </view>
-            </view>
-        </view>
-        <!--end 订单状态 -->
-
-        <view class="prod-col" wx:if="{{openSource == true}}">
-            <view class="col-item" bindtap='myCollectionHandle'>
-                <view class="num">{{collectionCount}}</view>
-                <view class="tit">我的收藏</view>
-            </view>
-            <view class="col-item">
-                <view class="num">5</view>
-                <view class="tit">我的消息</view>
-            </view>
-            <view class="col-item">
-                <view class="num">3</view>
-                <view class="tit">我的足迹</view>
-            </view>
-        </view>
-
-        <view class='my-menu'>
-            <view class='memu-item' bindtap='toDistCenter' wx:if="{{openSource == true}}">
-                <view class="i-name">
-                    <image src='../../images/icon/promotion.png'></image>
-                    <text>分销中心</text>
-                </view>
-                <view class='arrowhead'></view>
-            </view>
-
-            <view class='memu-item' bindtap='toCouponCenter' wx:if="{{openSource == true}}">
-                <view class="i-name">
-                    <image src='../../images/icon/getCoupon.png'></image>
-                    <text>领券中心</text>
-                </view>
-                <view class='arrowhead'></view>
-            </view>
-
-            <view class='memu-item' bindtap='toMyCouponPage' wx:if="{{openSource == true}}">
-                <view class="i-name">
-                    <image src='../../images/icon/myCoupon.png'></image>
-                    <text>我的优惠券</text>
-                </view>
-                <view class='arrowhead'></view>
-            </view>
-
-            <view class='memu-item' bindtap='myCollectionHandle'>
-                <view class="i-name">
-                    <image src='../../images/icon/promotion.png'></image>
-                    <text>收藏商品</text>
-                </view>
-                <view class='arrowhead'></view>
-            </view>
-
-            <view class='memu-item' bindtap='toAddressList'>
-                <view class="i-name">
-                    <image src='../../images/icon/myAddr.png'></image>
-                    <text>收货地址</text>
-                </view>
-                <view class='arrowhead'></view>
-            </view>
-
-            <view class='memu-item' bindtap='toAboutUsPage'>
-                <view class="i-name">
-                    <image src='../../images/icon/about_line.png'></image>
-                    <text>关于我们</text>
-                </view>
-                <view class='arrowhead'></view>
-            </view>
-
-            <view class='memu-item'>
-                <view class="i-name">
-                    <image src='../../images/icon/icon-msg.png'></image>
-                    <text>联系我们</text>
-                    <button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contact-btn">联系我们</button>
-                </view>
-            </view>
-        </view>
-        <!--end 列表项 -->
+    <view class="prod-col" wx:if="{{openSource == true}}">
+      <view class="col-item" bindtap='myCollectionHandle'>
+        <view class="num">{{collectionCount}}</view>
+        <view class="tit">我的收藏</view>
+      </view>
+      <view class="col-item">
+        <view class="num">5</view>
+        <view class="tit">我的消息</view>
+      </view>
+      <view class="col-item">
+        <view class="num">3</view>
+        <view class="tit">我的足迹</view>
+      </view>
     </view>
 
-    <!-- <view class="log-out" bindtap="logout" wx:if="isAuthInfo">
+    <view class='my-menu'>
+      <view class='memu-item' bindtap='toDistCenter' wx:if="{{openSource == true}}">
+        <view class="i-name">
+          <image src='../../images/icon/promotion.png'></image>
+          <text>分销中心</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item' bindtap='toCouponCenter' wx:if="{{openSource == true}}">
+        <view class="i-name">
+          <image src='../../images/icon/getCoupon.png'></image>
+          <text>领券中心</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item' bindtap='toMyCouponPage' wx:if="{{openSource == true}}">
+        <view class="i-name">
+          <image src='../../images/icon/myCoupon.png'></image>
+          <text>我的优惠券</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item' bindtap='myCollectionHandle'>
+        <view class="i-name">
+          <image src='../../images/icon/promotion.png'></image>
+          <text>收藏商品</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item' bindtap='toAddressList'>
+        <view class="i-name">
+          <image src='../../images/icon/myAddr.png'></image>
+          <text>收货地址</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item' bindtap='toAboutUsPage'>
+        <view class="i-name">
+          <image src='../../images/icon/about_line.png'></image>
+          <text>关于我们</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item'>
+        <view class="i-name">
+          <image src='../../images/icon/icon-msg.png'></image>
+          <text>联系我们</text>
+          <button size="mini" type="default" plain="true" open-type="contact" bindcontact="handleContact" session-from="sessionFrom" class="contact-btn">联系我们</button>
+        </view>
+      </view>
+    </view>
+    <!--end 列表项 -->
+  </view>
+
+  <!-- <view class="log-out" bindtap="logout" wx:if="isAuthInfo">
     <view class="log-out-n" wx:if="false">
       <text>退出登录</text>
     </view>
